--- a/resume/src/App.css
+++ b/resume/src/App.css
@@ -36,3 +36,51 @@
     transform: rotate(360deg);
   }
 }
+ 
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(180deg, #fcfcfc, #ffedf7);
+}
+
+.app-container {
+  min-height: 100vh;
+  display: flex;
+}
+
+.sidebar {
+  position: fixed;
+  margin: 1vh 15px;
+  background-color: #f7f5c8;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: center;
+  border-radius: 2em;
+  height: flex;
+}
+
+.nav-tabs {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-tabs li {
+  cursor: pointer;
+  font-size: 18px;
+  padding: 8vh 15px;
+
+}
+
+.main-content {
+  flex-grow: 1; /* Takes up remaining space */
+  padding: 20px;
+}
+
+.nav-tabs li:hover {
+  color: #f08aaf; /* Color on hover */
+  transform: scale(1.2); /* Slightly enlarge the icon on hover */
+}
+
+
