changed favicon, and added components in the home page

--- a/resume/src/App.css
+++ b/resume/src/App.css
@@ -76,6 +76,8 @@ body {
 .main-content {
   flex-grow: 1; 
   padding: 20px;
+  display: flex; 
+  flex-direction: column;
 }
 
 .nav-tabs li:hover {
