added titles and minor details for pages

--- a/resume/src/App.css
+++ b/resume/src/App.css
@@ -40,7 +40,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background: linear-gradient(180deg, #fcfcfc, #ffedf7);
+  background: linear-gradient(180deg, #faf7f9, #fcb3d9);
 }
 
 .app-container {
