--- a/resume/src/about/About.css
+++ b/resume/src/about/About.css
@@ -1,8 +1,20 @@
 .about-container{
-    margin: 10px 0 10px 70px;
+    position: relative;
+    margin: 10px 0 10px 80px;
     width: flex;
-    height: 500px;
+    height: 700px;
     background-color: bisque;
     opacity: 0.2;
     border-radius: 20px;
+    padding-top: 40px;
+}
+
+.about-heading {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 9vh;
+    color: #b3025d;
+    z-index: 1;
 }
