--- a/resume/src/Home.css
+++ b/resume/src/Home.css
@@ -9,21 +9,21 @@
 
 .myheading{
     position: absolute;
-    margin: 9vh 0 10px 20px;
-    /* padding: 0; */
-    /* top: 20px; */
+    margin: 5vh 0 0 4.5vw;
     left: 50%;
     transform: translateX(-50%);
     font-family: 'Times New Roman', Times, serif;
     font-size: 9vh;
     color: #b3025d;
     z-index: 1000;
-    width: flex;
+    width: 60vw;
+    text-align: center;
 
 }
 
 .container {
-    margin: 100px 0 0 70px;
+    width: calc(95vw - 4.5vw);
+    margin: 100px 0 0 4.5vw;
     /* padding: 50px 0; */
     height: 90vh;
     display: flex;
@@ -32,8 +32,8 @@
 }
 
 .image {
-    width: flex; 
-    max-width: 50vh;
+    width: 27vw;
+    min-width: 35vh;
     margin-right: 5vh; 
     border-radius: 10px; 
     opacity: 0;
@@ -43,10 +43,12 @@
 }
 
 .image-description {
-    max-width: 500px; 
+    max-width: 30vw;
+    max-height: 40vh;
     font-family: 'Times New Roman', Times, serif;
     font-size: 4vh;
     color: #b3025d;
+    text-align: center;
 }
 
 .image.loaded {
