--- a/resume/src/contact/Contact.css
+++ b/resume/src/contact/Contact.css
@@ -1,7 +1,7 @@
 .contact-container{
-    margin: 10px 0 10px 80px;
-    width: flex;
-    height: 500px;
+    margin: 10px 0 10px 4.5vw;
+    width: calc(95vw - 4.5vw);
+    height: 600px;
     background-color: bisque;
     opacity: 0.2;
     border-radius: 20px;
