--- a/resume/src/skill/Skill.css
+++ b/resume/src/skill/Skill.css
@@ -1,20 +1,17 @@
-/* Outer wrapper to keep skill-container and skill-backlay aligned */
 .skill-wrapper {
     position: absolute;
-    width: calc(95vw - 4.5vw);
-    /* max-width: calc(95vw - 60px); */
+    width: calc(90.5vw);
     margin: 10px 0 10px 4.5vw;
-    height: 600px;
+    height: 100vh;
 }
 
 .skill-backlay {
     position: relative;
     top: 0px;
-    width: calc(95vw - 4.5vw);
-    /* max-width: calc(95vw - 60px); */
+    width: calc(90.5vw);
     margin: 10px 0 10px 4.5vw;
-    height: 600px;
-    background-color: bisque;
+    height: 100vh;
+    background-color: #ffe4c4;
     opacity: 0.2;
     border-radius: 20px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
@@ -24,33 +21,87 @@
 .skill-container {
     position: relative;
     width: 100%; /* Match the skill-wrapper width */
-    padding-top: 20px;
+    /* padding-top: 20px; */
     z-index: 1;
 }
 
 .skill-heading {
-    margin: 0 0 2vh 0;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 9vh;
+    margin-bottom: 2vh;
+    font-family: 'Dongle';
+    line-height: 1.0;
+    font-size: 12vh;
     color: #b3025d;
     text-align: center;
 }
 
 .skill-description {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 4vh;
+    font-family: 'Dongle';
+    line-height: 1.0;
+    font-size: 4.5vh;
     text-align: center;
     color: #b3025d;
     margin: 20px 3vw 0 3vw;
 }
 
+
 .apps {
+    width: 100%;
+    height: 60%;
+    padding: 11vh 0;
     list-style: none;
-    padding: 0;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+    gap: 5vw;
+}
+
+.skill-item {
+    display: flex;
+    align-items: center;
+}
+
+.skill-icon {
+    width: 100px; /* Adjust icon size */
+    height: 100px; /* Adjust icon size */
 }
 
 .apps li:hover {
     transform: scale(1.2);
+}
+
+@media(max-width: 440px){
+    .skill-wrapper {
+        margin-left: 45px;
+        width: calc(100vw - 90px);
+    }
+
+    .skill-container{
+        padding-top: 3.5vh;
+    }
+
+    .skill-backlay {
+        margin-left: 45px;
+        width: calc(100vw - 90px);
+    }
+
+    .skill-heading {
+        margin: 0 1vw;
+        font-size: 7vh;
+    }
+
+    .skill-description {
+        font-size: 3vh;
+    }
+
+    .apps{
+        width: 90%;
+        padding: 5vh 2vh;
+        gap: 3vh;
+    }
+
+    .skill-icon {
+        width: 80px; /* Adjust icon size */
+        height: 80px; /* Adjust icon size */
+    }
 }
