--- a/resume/src/skill/Skill.css
+++ b/resume/src/skill/Skill.css
@@ -96,12 +96,18 @@
 
     .apps{
         width: 90%;
-        padding: 5vh 2vh;
+        padding: 2vh 2vh 5vh 2vh;
         gap: 3vh;
     }
 
     .skill-icon {
-        width: 80px; /* Adjust icon size */
-        height: 80px; /* Adjust icon size */
+        width: 75px; /* Adjust icon size */
+        height: 70px; /* Adjust icon size */
+    }
+}
+
+@media(min-height: 890px) and (max-height: 999px){
+    .apps{
+        margin-top: 10vh;
     }
 }
